caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/unclosed_struct_brace.caffeine
Blueprints
  "test":
    Requiring { env: String
    Provides { value: "x" }
